Добавление метода задающего шрифт